# glitchsnitch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: example.c  glitchsnitch.h  more_examples.c
